add more options in post

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4433,6 +4433,15 @@ white = #fff
 				margin-top 5px
 				line-height 1.15
 
+.blog-single-options
+	max-width 700px
+	margin 0 auto 40px auto
+	.option
+		font-family: 'PT Serif',serif;
+		font-size: 14px;
+		color: #aaa;
+		&.active
+			color #8bd393
 
 .editable
 	max-width: 700px;
