--- a/app/views/blog/creator.html
+++ b/app/views/blog/creator.html
@@ -57,8 +57,8 @@
             &nbsp; &nbsp; &nbsp;
             <span class="social"><i class="fa fa-heart"></i> {{ post.likes }}</span> &nbsp; &nbsp;
             <span class="social"><i class="fa fa-comment"></i> {{ post.reviews }}</span> &nbsp; &nbsp; &nbsp;
-            <a href="#" class="date">Recomendar</a>
-            <a href="#" class="date active"><i class="fa fa-check"></i> Recomendado</a>
+            <!-- <a href="#" class="date">Recomendar</a> -->
+            <!-- <a href="#" class="date active"><i class="fa fa-check"></i> Recomendado</a> -->
           </div>
         </div>
       </div>
@@ -74,6 +74,17 @@
           </div>
       </div>
 
+  </div>
+
+  <div class="grid-container">
+    <div class="grid-100">
+      <div class="blog-single-options">
+        <a href="#" class="option">Previsualizar</a>&nbsp; &nbsp; &nbsp;
+        <a href="#" class="option">Publicar</a>&nbsp; &nbsp; &nbsp;
+        <a href="#" class="option">Recomendar</a>
+        <a href="#" class="option active"><i class="fa fa-check"></i> Recomendado</a>
+      </div>
+    </div>
   </div>
 
   {% if edit %}
