add register links to landing

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -137,6 +137,7 @@ white = #fff
 	// max-width 600px
 	// margin auto
 	position relative
+	overflow: hidden;
 	&-nav
 		display flex
 		justify-content center
