--- a/app/views/pages/landing.html
+++ b/app/views/pages/landing.html
@@ -10,7 +10,7 @@
 					<div class="info">
 						<p class="title">Una plataforma para artistas visuales y almas independientes</p>
 						<p class="subtitle u-margin-top-40">Una red social y marketplace para artistas visuales para mostrar, descubrir, comprar y vender tus obras y creaciones.</p>
-						<a href="#" class="button">REGÍSTRATE AHORA</a>
+						<a href="/auth/signup" class="button">REGÍSTRATE AHORA</a>
 					</div>
 					<div class="images">
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450087317/general/lading-phones.png">
@@ -177,8 +177,8 @@
 				<p class="title">Únete ahora</p>
 				<p class="subtitle">Y encuentra a miles de artistas <br> con tus mismos intereses</p>
 				<div style="margin-top: 40px;">
-					<input class="input" placeholder="E-Mail"></input>
-					<a href="#" class="button">UNIRME</a>
+					<!-- <input class="input" placeholder="E-Mail"></input> -->
+					<a href="/auth/signup" class="button">UNIRME</a>
 				</div>
 			</div>
 		</div>
