add gif to landing

--- a/app/views/pages/landing.html
+++ b/app/views/pages/landing.html
@@ -63,7 +63,8 @@
 		<div class="grid-container">
 			<div class="grid-50">
 				<div class="lading-features-image">
-					<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450158448/general/landing-feature-1-img.svg">
+					<!-- <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450158448/general/landing-feature-1-img.svg"> -->
+					<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1453878326/general/art_feed.gif">
 				</div>
 			</div>
 			<div class="grid-50">
