--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4450,12 +4450,22 @@ white = #fff
 		font-size 30px
 		color #3b3d40
 		line-height: 1.5;
+	h3
+		font-family: 'Montserrat',sans-serif;
+		font-weight: bold;
+		font-size: 25px;
+		color: #3b3d40;
+		line-height: 1.5;
 	p
 		font-family: 'PT Serif', serif;
 		font-size 21px
 		color #666d70
 		line-height 1.5
 		margin-bottom 20px
+		i
+			font-style: italic;
+		b
+			font-weight: bold;
 
 	blockquote
 		font-family: 'PT Serif', serif;
