--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -9,6 +9,7 @@
 		<div class="grid-100">
 			<section class="slider">
 				<div class="slider-items">
+					<a href="/compra-y-vende-arte-en-internet-latinoamerica">
 					<div class="slider-item js-slide" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065553/general/home-slider-1.jpg')">
 						<div class="slider-item-inner">
 							<p class="title">La primera red social de artistas visuales y creadores de latinoamerica</p>
@@ -45,11 +46,11 @@
 		<div class="grid-100 grid-parent">
 			<div class="home-grid">
 				<div class="home-grid-column">
-					<a href="#" class="home-grid-element">
+					<a href="/compra-y-vende-arte-en-internet-latinoamerica" class="home-grid-element">
 						<div class="cover"></div>
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065548/general/home-gid-image-1.jpg">
 					</a>
-					<a href="#" class="home-grid-element">
+					<a href="/compra-y-vende-arte-en-internet-latinoamerica" class="home-grid-element">
 						<div class="cover"></div>
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065548/general/home-gid-image-2.jpg">
 					</a>
