--- a/app/views/partials/elements/table-user-item.html
+++ b/app/views/partials/elements/table-user-item.html
@@ -1,7 +1,7 @@
 <script type="text/template" id="template-table-user">
   <tr>
     <td><img src='<%=photo%>' width="35"></td>
-    <td><a href="http://am.local:3000/user/<%=username%>"><%=username%></a></td>
+    <td><a href="/user/<%=username%>"><%=username%></a></td>
     <td><%=email%></td>
     <td><%=city%></td>
     <td><%=country%></td>
@@ -17,6 +17,6 @@
             ];
             print(fragments.join('-'));
         %></td>
-    <td><button type="button" class="btn btn-success">editar</button></td>
+    <td><a href="/user/<%=username%>/account" class="btn btn-success">editar</a></td>
   </tr>
 </script>
