report featured items

--- a/app/views/auth/forgot.html
+++ b/app/views/auth/forgot.html
@@ -9,7 +9,7 @@
 			<p class="title">Los genios usualmente olvidan las cosas por concentrarse en lo importante</p>
 			<br><br><br>
       <form class="auth-form">
-        <input class="input" name='email' type="email" placeholder="E-mail"></input>
+        <input class="input" name='email' type="email" placeholder="Email" autofocus></input>
         <button class="button submit u-margin-top-10" data-color="green">
 					<a>RESETEAR MI PASSWORD</a>
 				</button>
