--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -23,7 +23,7 @@
 			<ul class="error errors">
 			</ul>
 			<form class='auth-form'>
-				<input name='email' class="input email" type="email" placeholder="Correo" required></input>
+				<input name='email' class="input email" type="email" placeholder="Correo" autofocus required></input>
 				<input name='password' class="input password u-margin-top-10" type="password" placeholder="Contraseña" required></input>
 				<button class="button submit u-margin-top-10" data-color="green">
 					<a>INGRESAR A MI CUENTA</a>
