--- a/app/views/report/users.html
+++ b/app/views/report/users.html
@@ -35,6 +35,7 @@
           <li><a class="isArtist">artista</a></li>
           <li><a class="verified">verificado</a></li>
           <li><a class="filled">completo</a></li>
+          <li><a class="featured-term">recomendado</a></li>
         </ul>
       </div>
       <input type="text" class="form-control search-box" aria-label="...">
