--- a/app/views/report/works.html
+++ b/app/views/report/works.html
@@ -28,6 +28,7 @@
         <button type="button" class="btn btn-drop btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="property">Propiedad</span> <span class="caret"></span></button>
         <ul class="dropdown-menu">
           <li><a class="name">nombre</a></li>
+          <li><a class="featured-term">recomendado</a></li>
         </ul>
       </div>
       <input type="text" class="form-control search-box" aria-label="...">
