--- a/app/views/user/account/password.html
+++ b/app/views/user/account/password.html
@@ -61,6 +61,8 @@
 
 {% block scripts %}
 	<script>
+		var profile = {{profile|json|safe}};
+		
 		$(function() {
 			new APP.AccountPasswordScreen();
 			$('.account-title').click(function () {
