--- a/app/views/auth/reset.html
+++ b/app/views/auth/reset.html
@@ -10,7 +10,7 @@
 			<br><br><br>
 			<form class="auth-form">
 				<input class="hide" name='token' value="{{token}}">
-				<input class="input" name='password' type="password" placeholder="Nueva contraseña"></input>
+				<input class="input" name='password' type="password" placeholder="Nueva contraseña" autofocus></input>
 				<br><br>
 				<input class="input" name='confirm_password' type="password" placeholder="Confirmar contraseña"></input>
 				<br><br>
