--- a/app/views/partials/elements/table-user-item.html
+++ b/app/views/partials/elements/table-user-item.html
@@ -18,5 +18,10 @@
             print(fragments.join('-'));
         %></td>
     <td><a href="/user/<%=username%>/account" class="btn btn-success">editar</a></td>
+    <% if(featured) { %>
+      <td><a class="btn featured-btn btn-primary">AM</a></td>
+    <% } else { %>
+      <td><a class="btn featured-btn btn-default">AM</a></td>
+    <% } %>
   </tr>
 </script>
