--- a/app/views/partials/elements/table-work-item.html
+++ b/app/views/partials/elements/table-work-item.html
@@ -16,5 +16,10 @@
             print(fragments.join('-'));
         %></td>
     <td><a href="/user/<%=User.username%>/work/<%=nameSlugify%>/edit" class="btn btn-success">editar</a></td>
+    <% if(featured) { %>
+      <td><a class="btn featured-btn btn-primary">AM</a></td>
+    <% } else { %>
+      <td><a class="btn featured-btn btn-default">AM</a></td>
+    <% } %>
   </tr>
 </script>
