delete duplicate entries while getting notifications

--- a/app/views/partials/footer.html
+++ b/app/views/partials/footer.html
@@ -69,7 +69,7 @@
 						<p class="am-Footer-text u-padding-bottom-20">Lo más nuevo, fresco y valioso de la <br> comunidad de creadores visuales</p>
 						<div class="am-Email-input">
 							<form class="subscription-form">
-								<input type="email" name="email" placeholder="Ingresa tu Correo"/>
+								<input name="email" placeholder="Ingresa tu Correo"/>
 								<i class="fa fa-envelope-o subscription-btn"></i>
 							</form>
 						</div>
