--- a/app/views/blog/category.html
+++ b/app/views/blog/category.html
@@ -1,4 +1,5 @@
-{% set pageTitle = "Blog" %}
+{% set templates = ['post'] %}
+{% set pageTitle = category.name %}
 {% extends '../partials/base.html' %}
 
 {% block elements %}
