--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -1,3 +1,6 @@
+{% set templates = ['work', 'user']%}
+{% set pageTitle = 'Arte Manifiesto, la primera red social de artistas visuales y creadores de latinoamerica' %}
+
 {% extends '../partials/base.html' %}
 
 {% block elements %}
