--- a/app/views/pages/landing.html
+++ b/app/views/pages/landing.html
@@ -1,6 +1,7 @@
+{% set pageTitle = 'Arte Manifiesto, Una plataforma para artistas visuales y almas independientes' %}
+{% set path = '' %}
 
 {% extends '../partials/base.html' %}
-{% set path = '' %}
 {% block elements %}
 
 	<div class="lading-banner-container">
