--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -1,4 +1,6 @@
 {% extends '../../partials/base.html' %}
+{% set pageTitle = 'Administrar cuenta' %}
+
 {% block elements %}
 	<div class="am-profile" style="padding-left: 0; padding-right: 0;">
 
