--- a/app/views/user/collection/index.html
+++ b/app/views/user/collection/index.html
@@ -1,5 +1,7 @@
-{% extends '../../partials/base.html' %}
+{% set templates = ['work']%}
+{% set pageTitle = collection.name %}
 
+{% extends '../../partials/base.html' %}
 
 {% block elements %}
 
