--- a/app/views/user/notifications.html
+++ b/app/views/user/notifications.html
@@ -1,5 +1,9 @@
+{% set templates = ['notification-follow', 'notification-like',
+ 										'notification-request', 'notification-review'] %}
+{% set pageTitle = 'Notificaciones' %}
+{% set path = 'notifications' %}
+
 {% extends '../partials/base.html' %}
-{% set path = 'notifcations' %}
 {% block elements %}
 
 	<div class="notifications">
