--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -1,4 +1,5 @@
 {% extends '../../partials/base.html' %}
+{% set pageTitle = 'Agregar Obra' %}
 
 {% block elements %}
 <div class="am-upload-work">
