--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -1,3 +1,6 @@
+{% set templates = ['collection-item', 'carrousel-item', 'review']%}
+{% set pageTitle = work.name %}
+
 {% extends '../../partials/base.html' %}
 
 {% block styles %}
