--- a/app/views/blog/draft.html
+++ b/app/views/blog/draft.html
@@ -1,4 +1,5 @@
-{% set pageTitle = "Blog" %}
+{% set templates = ['post'] %}
+{% set pageTitle = "Draft" %}
 {% extends '../partials/base.html' %}
 
 {% block elements %}
