--- a/app/views/pages/confirm-email.html
+++ b/app/views/pages/confirm-email.html
@@ -1,5 +1,6 @@
-{% extends '../partials/base.html' %}
+{% set pageTitle = 'Confirmación de correo' %}
 
+{% extends '../partials/base.html' %}
 
 {% block elements %}
 	<div class="am-welcome">
