--- a/app/views/pages/users.html
+++ b/app/views/pages/users.html
@@ -1,11 +1,13 @@
-{% extends '../partials/base.html' %}
-
+{% set templates = ['user', 'filter-item']%}
+{% set pageTitle = 'Descubre Artistas' %}
 {% set path = 'users' %}
+{% set bannerTitle = 'Descubre nuevos artistas y creadores' %}
+{% set bannerImg = 'discover-banner-artists.jpg' %}
+
+{% extends '../partials/base.html' %}
 
 {% block elements %}
 
-{% set bannerTitle = 'Descubre nuevos artistas y creadores' %}
-{% set bannerImg = 'discover-banner-artists.jpg' %}
 {% include '../partials/banner.html' %}
 
 <div style="max-width: 1500px; margin: auto; overflow: hidden">
