--- a/app/views/report/works.html
+++ b/app/views/report/works.html
@@ -1,4 +1,6 @@
-{% set path = "works" %}
+{% set templates = ['table-work-item']%}
+{% set pageTitle = 'Reporte Obras' %}
+{% set path = 'works' %}
 
 {% extends '../partials/report.html' %}
 
@@ -57,7 +59,6 @@
       </tr>
     </thead>
     <tbody class="container-items">
-
     </tbody>
   </table>
 </div>
