--- a/app/views/user/account/password.html
+++ b/app/views/user/account/password.html
@@ -1,4 +1,6 @@
 {% extends '../../partials/base.html' %}
+{% set pageTitle = 'Cambiar contraseña' %}
+
 {% block elements %}
 	<div class="am-profile" style="padding-left: 0; padding-right: 0;">
 
@@ -62,7 +64,7 @@
 {% block scripts %}
 	<script>
 		var profile = {{profile|json|safe}};
-		
+
 		$(function() {
 			new APP.AccountPasswordScreen();
 			$('.account-title').click(function () {
