--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -3,6 +3,22 @@
 
 {% extends '../../partials/base.html' %}
 
+{% block head %}
+	<meta property="og:site_name" content="Arte Manifiesto" />
+	<meta property="og:site" content="artemanifiesto.com" />
+	<meta property="og:title" content="{{work.name}}" />
+	<meta property="og:description" content="{{work.description}}" />
+	<meta property="og:image" content="{{work.photo|addFilter('w_1200,h_630,q_60,c_crop')}}" />
+	<meta property="og:url" content="http://artemanifiesto.com/user/{{work.User.username}}/work/{{work.nameSlugify}}" />
+	<meta property="og:type" content="article" />
+	<meta name='twitter:card' content='summary_large_image' />
+	<meta name='twitter:image:src' content="{{work.photo|addFilter('w_1200,h_630,q_60,c_crop')}}" />
+	<meta name='twitter:site' content='@artemanifiesto' />
+	<meta name='twitter:url' content='http://artemanifiesto.com/user/{{work.User.username}}/work/{{work.nameSlugify}}' />
+	<meta name='twitter:description' content='{{work.description}}' />
+	<meta name='twitter:title' content='{{work.name}}' />
+{% endblock %}
+
 {% block styles %}
 	<link rel="stylesheet" href="/css/photoswipe.css">
 	<link rel="stylesheet" href="/css/default-skin/default-skin.css">
