--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -10,8 +10,20 @@
 	{% else %}
 		<title>Arte Manifiesto</title>
 	{% endif %}
-
 	{% block head %}
+		<meta property="og:site_name" content="Arte Manifiesto" />
+		<meta property="og:site" content="artemanifiesto.com" />
+		<meta property="og:title" content="Unete a la primera red social de artistas emergentes y almas independientes en Latinoamérica" />
+		<meta property="og:description" content="La primera red social de artistas visuales y creadores de latinoamerica" />
+		<meta property="og:image" content="http://res.cloudinary.com/arte-manifiesto/image/upload/v1454108813/general/am-og.jpg" />
+		<meta property="og:url" content="http://artemanifiesto.com" />
+		<meta property="og:type" content="website" />
+		<meta name='twitter:card' content='summary_large_image' />
+		<meta name='twitter:image:src' content="http://res.cloudinary.com/arte-manifiesto/image/upload/v1454108813/general/am-og.jpg" />
+		<meta name='twitter:site' content='@artemanifiesto' />
+		<meta name='twitter:url' content='http://artemanifiesto.com' />
+		<meta name='twitter:description' content='La primera red social de artistas visuales y creadores de latinoamerica' />
+		<meta name='twitter:title' content='Unete a la primera red social de artistas emergentes y almas independientes en Latinoamérica' />
 	{% endblock %}
 	<link href='https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
 
