--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -37,12 +37,12 @@
   <div class="grid-container u-margin-top-20">
     <div class="grid-100">
       <a href="/blog/post/{{featureds[0].nameSlugify}}">
-      <section class="slider">
+      <section class="slider blog">
         <div class="slider-items">
           <div class="slider-item js-slide" style="background-image: url('{{featureds[0].photo|addFilter('w_1600,c_limit')}}')">
             <div class="featured {% if !featureds[0].featured %} disabled {% endif %}">AM</div>
             <span class="slider-item-tag">{{featureds[0].Category.name}}</span>
-            <div class="slider-item-inner">
+            <div class="slider-item-inner blog">
               <p class="title">{{featureds[0].name}}</p>
               <div class="author u-margin-top-30">
                 <p>Por &nbsp;&nbsp;</p>
