add new buttons in blog index

--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -30,6 +30,15 @@
   <div class="u-separator" style="background: #eee;"></div>
 
 
+  <div class="grid-container">
+    <div class="grid-100">
+      <div class="blog-single-trash" style="max-width: initial;border: none;margin-bottom: 0;">
+          <a href="#" class="button following publish-btn publish">Nuevo post</a>
+          <a href="#" class="button following preview-btn">Borradores</a>
+      </div>
+    </div>
+  </div>
+
   <!-- ********************************************************************
     $ BLOG MAIN ARTICLE
   ********************************************************************* -->
