--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2057,6 +2057,7 @@ white = #fff
 	text-align: center;
 	max-width 500px
 	margin auto
+	cursor pointer
 	a
 		font-size: 16px;
 		font-size em
@@ -4287,6 +4288,7 @@ white = #fff
 			border-radius 17px
 			letter-spacing 2px
 			display inline-block
+			cursor pointer
 			&.white
 				border solid 1px #ededed
 				color #666
